--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.1.2",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.30",
     "sass": "^1.56.1",
+    "tailwindcss": "^3.3.3",
     "vite": "^3.1.8"
   }
 }
